--- a/gist_hub/assets/css/app.css
+++ b/gist_hub/assets/css/app.css
@@ -18,8 +18,22 @@
 
 .gh-gradient {
     background-image: linear-gradient(to bottom, #631A61, #551653, #340E33, #010101);
+    /* background-image: transparent; */
     height: 225px;
+    z-index: 1;
+    position: sticky;
+    top: 60px;
 }
+/* 
+body {
+  height: 100vh;
+  margin: 0;
+  background-image: linear-gradient(to bottom, #631A61 70px, #010101 40%);
+  background-repeat: no-repeat;
+  background-color: #010101;
+  min-height: 100vh;
+  margin: 0; 
+} */
 
 .dropdown-menu-arrow::before {
   content: "";
