apply sticky positioning to keep website header visible on scroll

--- a/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
+++ b/gist_hub/lib/gist_hub_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<header class="flex justify-between items-center space-x-2 py-2 bg-ghDark">
+<header class="flex justify-between items-center space-x-2 py-2 bg-ghDark sticky top-0 z-10">
   <div class="flex relative items-center">
     <a href={~p"/"} class="py-2 ml-2">
       <img src="/images/gist-logo.svg" alt="Logo" class="h-8 w-auto">
