--- a/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
+++ b/gist_hub/lib/gist_hub_web/live/gist_live.html.heex
@@ -90,6 +90,9 @@
           </code></pre>
         </div>
       </div>
+      <div class="mt-20">
+        <p class="text-white font-brand">*</p>
+      </div>
     </div>
   <% end %>
-</div>Bg
+</div>
